# mono-wrapper

./: .clang-format  .editorconfig  .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  LICENSE  Makefile  README.md  THIRD-PARTY-LEGAL-NOTICES  compile_commands.json  format.sh
lib/runtime/linux-x64/: libSystem.IO.Ports.Native.so.dbg  libSystem.Net.Security.Native.so.dbg
scripts/: run-tests.sh
src/: Main.cpp  Metrics.hpp  MonoWrapper.cpp  MonoWrapper.h  Security.hpp  main.cpp  metrics.hpp  mono-config  monowrapper.cpp  monowrapper.h
src/ScriptCompiler/: ScriptCompiler.cs  ScriptCompiler.csproj  ScriptCompiler.sln  packages.config
src/ScriptCompiler/Properties/: AssemblyInfo.cs
src/ScriptSystem/: Events.cs  Script.cs  ScriptCompiler.cs  ScriptSystem.csproj  ScriptSystem.sln  packages.config
src/ScriptSystem/Properties/: AssemblyInfo.cs
src/Scripts/: Main.cs  Makefile
src/Scripts/ChaosScriptPOC_NETFRAMEWORK/: ChaosScriptPOC_NETFRAMEWORK.sln
src/Scripts/ChaosScriptPOC_NETFRAMEWORK/ChaosScriptPOC_NETFRAMEWORK/: ChaosScriptPOC_NETFRAMEWORK.csproj  EventAttribute.cs  Program.cs  ScriptLoader.cs
src/Scripts/ChaosScriptPOC_NETFRAMEWORK/ChaosScriptPOC_NETFRAMEWORK/Properties/: AssemblyInfo.cs
src/Scripts/TestScript/: mod.json
src/Scripts/TestScript/src/: EventTest.cs
src/mono/: Main.cpp  MonoWrapper.h
src/netcore/: Main.cpp
src/scripts/test1/: test1.cs
src/tests/: test_main.cpp  util.hpp
